# UNIK4490-Rover

./: .gitignore  README.md
Rover_1/: README.md  arbeidsfordeling.txt
Rover_1/rapport/: BibTEX.bib  RobotOblig3.aux  RobotOblig3.bcf  RobotOblig3.run.xml  RobotOblig3.tex  Setup.aux  Setup.bcf  Setup.tex
Rover_1/rapport/Oppgaver/: Oppgave1.tex  Oppgave2.tex
Rover_1/rover1_motordriver/: package.xml
Rover_1/rover1_motordriver/launch/: small_base.launch  small_slam.launch
Rover_1/rover1_motordriver/msg/: Angle.msg  Distance.msg  Position.msg  Velocity.msg
Rover_1/rover1_motordriver/scripts/: autopilot_test.py  driver.py  driver_pid.py  manual_test.py  motive_receiver.py  odometry.py  pid.py
Rover_1/rover1_motordriver/src/: odometry.cpp  posture_controller.cpp
Rover_1/rover1_motordriver/teensy_encoders/: teensy_encoders.ino
Rover_2/: CMakeLists.txt  README.md  Rover-Rapport.tex  odometry.cpp  odometry1.cpp  posture_controller.cpp
Sources/: github-cheat-sheet.md
