<?xml version="1.0"?>
<package>
  <name>rover1_motordriver</name>
  <version>0.0.0</version>
  <description>The rover_motordriver package</description>

  <maintainer email="see@todo.todo">see</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
   <run_depend>message_runtime</run_depend> 
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
